typescript2/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-hello
  labels:
    name: prod-hello
    environment: production
